# DLPipelines

./: README.md  Test.csv  Train.csv  model_eval.ipynb  model_training.ipynb  pyproject.toml
models/: ClassifierBase.py  RegressionBase.py  SegmentationBase.py
transforms/: Transform4ClassifierBase.py  Transform4SegmentationBase.py
utils/: model_performance.py
