[project]
name = "dlpipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning==2.4.0",
    "matplotlib>=3.9.4",
    "monai[itk,nibabel]==1.3.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "timm>=1.0.14",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.19.5",
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
